syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.ufu.facom.gbc074.kvs";

package kvs;

message Tupla {
  string chave = 1;
  string valor = 2;
  int32 versao = 3;
}

message ChaveValor {
  string chave = 1;
  string valor = 2;
}

message ChaveVersao {
  string chave = 1;
  optional int32 versao = 2;
}

message Versao {
  int32 versao = 1;
}

service KVS {
  rpc Insere(ChaveValor) returns (Versao);
  rpc Consulta(ChaveVersao) returns (Tupla);
  rpc Remove(ChaveVersao) returns (Versao);
  rpc InsereVarias(stream ChaveValor) returns (stream Versao);
  rpc ConsultaVarias(stream ChaveVersao) returns (stream Tupla);
  rpc RemoveVarias(stream ChaveVersao) returns (stream Versao);
  rpc Snapshot(Versao) returns (stream Tupla);
}
